--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,92 @@
-  a n n o t a t e d - t y p e s = = 0 . 7 . 0 
- 
- a n y i o = = 4 . 9 . 0 
- 
- b e a u t i f u l s o u p 4 = = 4 . 1 3 . 4 
- 
- b l i n k e r = = 1 . 9 . 0 
- 
- c e r t i f i = = 2 0 2 5 . 6 . 1 5 
- 
- c f f i = = 1 . 1 7 . 1 
- 
- c h a r s e t - n o r m a l i z e r = = 3 . 4 . 2 
- 
- c l i c k = = 8 . 2 . 1 
- 
- c l o u d p i c k l e = = 3 . 1 . 1 
- 
- c o l o r a m a = = 0 . 4 . 6 
- 
- c o n t o u r p y = = 1 . 3 . 2 
- 
- c u r l _ c f f i = = 0 . 1 1 . 4 
- 
- c y c l e r = = 0 . 1 2 . 1 
- 
- C y t h o n = = 3 . 1 . 2 
- 
- d i s t r o = = 1 . 9 . 0 
- 
- e t _ x m l f i l e = = 2 . 0 . 0 
- 
- F a r a m a - N o t i f i c a t i o n s = = 0 . 0 . 4 
- 
- f a s t a p i = = 0 . 1 1 6 . 1 
- 
- f i l e l o c k = = 3 . 1 3 . 1 
- 
- F l a s k = = 3 . 1 . 1 
- 
- f l a s k - c o r s = = 6 . 0 . 1 
- 
- f o n t t o o l s = = 4 . 5 8 . 4 
- 
- f r o z e n d i c t = = 2 . 4 . 6 
- 
- f s s p e c = = 2 0 2 4 . 6 . 1 
- 
- g r o q = = 0 . 3 0 . 0 
- 
- g y m = = 0 . 2 6 . 2 
- 
- g y m - n o t i c e s = = 0 . 0 . 8 
- 
- g y m n a s i u m = = 1 . 1 . 1 
- 
- h 1 1 = = 0 . 1 6 . 0 
- 
- h t t p c o r e = = 1 . 0 . 9 
- 
- h t t p t o o l s = = 0 . 6 . 4 
- 
- h t t p x = = 0 . 2 8 . 1 
- 
- h u g g i n g f a c e - h u b = = 0 . 3 4 . 3 
- 
- i d n a = = 3 . 1 0 
- 
- i t s d a n g e r o u s = = 2 . 2 . 0 
- 
- J i n j a 2 = = 3 . 1 . 4 
- 
- j i t e r = = 0 . 1 0 . 0 
- 
- k i w i s o l v e r = = 1 . 4 . 8 
- 
- M a r k u p S a f e = = 2 . 1 . 5 
- 
- m a t p l o t l i b = = 3 . 1 0 . 3 
- 
- m p m a t h = = 1 . 3 . 0 
- 
- m u l t i t a s k i n g = = 0 . 0 . 1 1 
- 
- n a r w h a l s = = 1 . 4 6 . 0 
- 
- n e t w o r k x = = 3 . 3 
- 
- n u m p y = = 2 . 1 . 2 
- 
- o p e n a i = = 1 . 9 8 . 0 
- 
- o p e n p y x l = = 3 . 1 . 5 
- 
- p a c k a g i n g = = 2 5 . 0 
- 
- p a n d a s = = 2 . 3 . 0 
- 
- p a t s y = = 1 . 0 . 1 
- 
- p e e w e e = = 3 . 1 8 . 2 
- 
- p i l l o w = = 1 1 . 0 . 0 
- 
- p l a t f o r m d i r s = = 4 . 3 . 8 
- 
- p l o t l y = = 6 . 2 . 0 
- 
- p r o t o b u f = = 6 . 3 1 . 1 
- 
- p y c p a r s e r = = 2 . 2 2 
- 
- p y d a n t i c = = 2 . 1 1 . 7 
- 
- p y d a n t i c _ c o r e = = 2 . 3 3 . 2 
- 
- p y p a r s i n g = = 3 . 2 . 3 
- 
- p y t h o n - d a t e u t i l = = 2 . 9 . 0 . p o s t 0 
- 
- p y t h o n - d o t e n v = = 1 . 1 . 1 
- 
- p y t z = = 2 0 2 5 . 2 
- 
- P y Y A M L = = 6 . 0 . 2 
- 
- r e g e x = = 2 0 2 4 . 1 1 . 6 
- 
- r e q u e s t s = = 2 . 3 2 . 4 
- 
- s a f e t e n s o r s = = 0 . 5 . 3 
- 
- s c i p y = = 1 . 1 6 . 0 
- 
- s e t u p t o o l s = = 8 0 . 9 . 0 
- 
- s i x = = 1 . 1 7 . 0 
- 
- s n i f f i o = = 1 . 3 . 1 
- 
- s o u p s i e v e = = 2 . 7 
- 
- s t a b l e _ b a s e l i n e s 3 = = 2 . 6 . 0 
- 
- s t a r l e t t e = = 0 . 4 7 . 2 
- 
- s t a t s m o d e l s = = 0 . 1 4 . 5 
- 
- s y m p y = = 1 . 1 3 . 3 
- 
- t a = = 0 . 1 1 . 0 
- 
- t o k e n i z e r s = = 0 . 2 1 . 2 
- 
- t o r c h = = 2 . 7 . 0 + c u 1 2 8 
- 
- t o r c h a u d i o = = 2 . 7 . 0 + c u 1 2 8 
- 
- t o r c h v i s i o n = = 0 . 2 2 . 0 + c u 1 2 8 
- 
- t q d m = = 4 . 6 7 . 1 
- 
- t r a n s f o r m e r s = = 4 . 5 4 . 1 
- 
- t y p i n g - i n s p e c t i o n = = 0 . 4 . 1 
- 
- t y p i n g _ e x t e n s i o n s = = 4 . 1 2 . 2 
- 
- t z d a t a = = 2 0 2 5 . 2 
- 
- u r l l i b 3 = = 2 . 5 . 0 
- 
- u v i c o r n = = 0 . 3 5 . 0 
- 
- w a t c h f i l e s = = 1 . 1 . 0 
- 
- w e b s o c k e t s = = 1 5 . 0 . 1 
- 
- W e r k z e u g = = 3 . 1 . 3 
- 
- w h e e l = = 0 . 4 5 . 1 
- 
- y f i n a n c e = = 0 . 2 . 6 5 
- 
- 
+annotated-types==0.7.0
+anyio==4.9.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.1.1
+colorama==0.4.6
+contourpy==1.3.2
+curl_cffi==0.11.4
+cycler==0.12.1
+Cython==3.1.2
+distro==1.9.0
+et_xmlfile==2.0.0
+Farama-Notifications==0.0.4
+fastapi==0.116.1
+filelock==3.13.1
+Flask==3.1.1
+flask-cors==6.0.1
+fonttools==4.58.4
+frozendict==2.4.6
+fsspec==2024.6.1
+groq==0.30.0
+gym==0.26.2
+gym-notices==0.0.8
+gymnasium==1.1.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.34.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.10.0
+kiwisolver==1.4.8
+MarkupSafe==2.1.5
+matplotlib==3.10.3
+mpmath==1.3.0
+multitasking==0.0.11
+narwhals==1.46.0
+networkx==3.3
+numpy==2.1.2
+openai==1.98.0
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.0
+patsy==1.0.1
+peewee==3.18.2
+pillow==11.0.0
+platformdirs==4.3.8
+plotly==6.2.0
+protobuf==6.31.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scipy==1.16.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+stable_baselines3==2.6.0
+starlette==0.47.2
+statsmodels==0.14.5
+sympy==1.13.3
+ta==0.11.0
+tokenizers==0.21.2
+torch==2.7.0+cu128
+torchaudio==2.7.0+cu128
+torchvision==0.22.0+cu128
+tqdm==4.67.1
+transformers==4.54.1
+typing-inspection==0.4.1
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wheel==0.45.1
+yfinance==0.2.65
