--- a/requirements.txt
+++ b/requirements.txt
@@ -75,9 +75,9 @@ statsmodels==0.14.5
 sympy==1.13.3
 ta==0.11.0
 tokenizers==0.21.2
-torch==2.7.0+cu128
-torchaudio==2.7.0+cu128
-torchvision==0.22.0+cu128
+torch==2.7.0
+torchaudio==2.7.0
+torchvision==0.22.0
 tqdm==4.67.1
 transformers==4.54.1
 typing-inspection==0.4.1
@@ -90,3 +90,4 @@ websockets==15.0.1
 Werkzeug==3.1.3
 wheel==0.45.1
 yfinance==0.2.65
+
